--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Hello World</title>
 		<meta name="viewport" 
 			content="initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-		<script src="js/jquery-1.7.1.min"></script>
+		<script src="js/jquery-1.7.1.min.js"></script>
 		<script>
 			jQuery(window).ready(function() {
 				jQuery("#btnInit").click(initiate_geolocation);
