moved geo js to separate file geo.js

--- a/index.html
+++ b/index.html
@@ -5,38 +5,7 @@
 		<meta name="viewport" 
 			content="initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
 		<script src="js/jquery-1.7.1.min.js"></script>
-		<script>
-			jQuery(window).ready(function() {
-				jQuery("#btnInit").click(initiate_geolocation);
-			});
-			
-			function initiate_geolocation() {
-				navigator.geolocation.getCurrentPosition(handle_geolocation_query, handle_errors);
-			}
-			
-			function handle_geolocation_query(position) {
-				alert('Lat: ' + position.coords.latitude + ' ' + 
-					  'Lon: ' + position.coords.longitude);
-			}
-			
-			function handle_errors(error) {
-				switch(error.code) {
-					case error.PERMISSION_DENIED: 
-						alert("user did not share geolocation");
-						break;
-					case error.POSITION_UNAVAILABLE:
-						alert("could not detect current position");
-						break;
-					case error.TIMEOUT:
-						alert("retrieving position timed out");
-						break;
-					default:
-						alert("unknown error");
-						break;
-				}
-			}
-					
-		</script>
+		<script src="js/geo.js">
 	</head>
 	<body>
 		<div id="fb-root"></div>
