--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" 
 			content="initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
 		<script src="js/jquery-1.7.1.min.js"></script>
-		<script src="js/geo.js">
+		<script src="js/geo.js"></script>
 	</head>
 	<body>
 		<div id="fb-root"></div>
