moved fb js to js/fb.js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 			content="initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
 		<script src="js/jquery-1.7.1.min.js"></script>
 		<script src="js/geo.js"></script>
+		<script src="js/fb.js"></script>
 	</head>
 	<body>
 		<div id="fb-root"></div>
@@ -21,63 +22,6 @@
 	<div id="logout">
 		<p><button  onClick="FB.logout();">Logout</button></p>
 	</div>
-	<script>
-		(function() {
-			var e = document.createElement('script'); e.async = true;
-			e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
-			document.getElementById('fb-root').appendChild(e);
-        }());
-
-		window.fbAsyncInit = function() {
-			FB.init({ appId: '297402036983700', 
-			status: true, 
-			cookie: true,
-			xfbml: true,
-			oauth: true});
-
-			FB.Event.subscribe('auth.authResponseChange', handleResponseChange);  
-		};
-
-		function loginUser() {    
-			FB.login(function(response) { }, {scope:'email'});     
-		}
-
-		function handleResponseChange(response) {
-			document.body.className = response.authResponse ? 'connected' : 'not_connected';
-
-			if (response.authResponse) {
-				console.log(response);
-			}
-
-			updateUserInfo(response);
-		}
-
-		function updateUserInfo(response) {
-			FB.api('/me', function(response) {
-			document.getElementById('user-info').innerHTML = '<img src="https://graph.facebook.com/' + response.id + '/picture">' + response.name;
-		});
-	}
-
-		function getUserFriends() {
-			FB.api('/me/friends&fields=name,picture', function(response) {
-				console.log('Got friends: ', response);
-
-				if (!response.error) {
-					var markup = '';
-
-					var friends = response.data;
-
-					for (var i=0; i < friends.length && i < 25; i++) {
-						var friend = friends[i];
-
-						markup += '<img src="' + friend.picture + '"> ' + friend.name + '<br>';
-					}
-
-					document.getElementById('user-friends').innerHTML = markup;
-				}	
-			});
-		}
-	</script>
 	</body>
 </html>
 <style>
