trying to add fb script to 'fb-root'

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 	</head>
 	<body>
 		<div id="fb-root"></div>
+		(function() {
+			var e = document.createElement('script'); 
+			e.async = true;
+			e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
+			document.getElementById('fb-root').appendChild(e);
+		}());
 		<div id="user-info"></div>
 		<a href="#" onclick="getUserFriends();">Get friends</a><br>
 		<div>
