forgot script braces

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 	</head>
 	<body>
 		<div id="fb-root"></div>
-		(function() {
-			var e = document.createElement('script'); 
-			e.async = true;
-			e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
-			document.getElementById('fb-root').appendChild(e);
-		}());
+		<script>
+			(function() {
+				var e = document.createElement('script'); 
+				e.async = true;
+				e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
+				document.getElementById('fb-root').appendChild(e);
+			}());
+		</script>
 		<div id="user-info"></div>
 		<a href="#" onclick="getUserFriends();">Get friends</a><br>
 		<div>
