--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 		<script src="js/jquery-1.7.1.min.js"></script>
 		<script src="js/geo.js"></script>
 		<script src="js/fb.js"></script>
+		<link rel="stylesheet" href="css/bootstrap-responsive.css">
+		<link rel="stylesheet/less" type="text/css" href="less/bootstrap.less">
+		<script src="less/less.js" type="text/javascript"></script>
+		
 	</head>
 	<body>
 		<div id="fb-root"></div>
