--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<script src="js/fb.js"></script>
 		<link rel="stylesheet" href="css/bootstrap-responsive.css">
 		<link rel="stylesheet/less" type="text/css" href="less/bootstrap.less">
-		<script src="less/less.js" type="text/javascript"></script>
+		<script src="less/less-1.2.1.min.js" type="text/javascript"></script>
 		
 	</head>
 	<body>
