--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		
 	</head>
 	<body>
-		<div id="fsb-root"></div>
+		<div id="fb-root"></div>
 		<script>
 			(function() {
 				var e = document.createElement('script'); 
