removing fixed top attribute on nav bar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 	
-	<div class="navbar navbar-fixed-top">
+	<div class="navbar">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -56,7 +56,6 @@
       </div>
     </div>
 
-	
 		<div id="fb-root"></div>
 		<script>
 			(function() {
