testing button bootstrap

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<div id="user-info"></div>
 		<a href="#" onclick="getUserFriends();">Get friends</a><br>
 		<div>
-			<button id="btnInit" class=".btn-success">Find my location</button>
+			<button id="btnInit" class="btn-success">Find my location</button>
 		</div>
 	<div id="user-friends"></div>
 	<div id="login">
