css + fb login button

--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
 		</div>
 	<div id="user-friends"></div>
 	<div id="login">
+	<div class="fb-login-button" data-show-faces="false" data-width="200" data-max-rows="1"></div>
 		<p><button onClick="loginUser();">Login</button></p>
 	</div>
 	<div id="logout">
-		<p><button  onClick="FB.logout();">Logout</button></p>
+		<p><button class="btn-danger" onClick="FB.logout();">Logout</button></p>
 	</div>
 	</body>
 </html>
