--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		</div>
 	<div id="user-friends"></div>
 	<div id="login">
-	<div class="fb-login-button" data-show-faces="false" data-width="200" data-max-rows="1"></div>
+	<div class="fb-login-button" data-show-faces="false" data-width="200" data-max-rows="1" onClick="loginUser();"></div>
 		<p><button onClick="loginUser();">Login</button></p>
 	</div>
 	<div id="logout">
