--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<button id="btnInit" class="btn-success">Find my location</button>
 		</div>
 		<div id="user-friends"></div>
-		<div class="fb-login-button" data-show-faces="false" data-width="200" data-max-rows="1"></div>
+		<div id="login" class="fb-login-button" data-show-faces="false" data-width="200" data-max-rows="1"></div>
 		<div id="logout">
 			<p><button class="btn-danger" onClick="FB.logout();">Logout</button></p>
 		</div>
