--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 		<div id="logout">
 			<p><button class="btn-danger" onClick="FB.logout();">Logout</button></p>
 		</div>
+		
+		<!-- add javascript here -->
+		<script src="assets/js/bootstrap-collapse.js"></script>
+
 	</body>
 </html>
 <style>
