trying to move fb button to nav

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 							<li><a href="#">What?</a></li>
 							<li><a href="#">About</a></li>
 						</ul>
+						<ul class="nav pull-right">
+							<li>
+								<div id="login" class="fb-login-button" data-show-faces="false" data-width="200" data-max-rows="1"></div>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
