--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hello World</title>
+		<title>Welcome to calchat!</title>
 		<meta name="viewport" 
 			content="initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
 		<script src="js/jquery-1.7.1.min.js"></script>
