index container, adding typeahead.js

--- a/index.html
+++ b/index.html
@@ -52,6 +52,37 @@
 				document.getElementById('fb-root').appendChild(e);
 			}());
 		</script>
+		
+		<div class="container">
+			<div class="row">
+				<div class="span3">
+					<p>Are you at: 
+				</div>
+				<div class="span3">
+					<div class="well">Soda</div>
+				</div>
+				<div class="span3">
+					<div class="well">Cory</div>
+				</div>
+				<div class="span3">
+					<div class="well">Etcheverry</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="span12">
+					or
+				</div>
+			</div>
+			<div class="row">
+				<div class="span4"
+					search by class:
+				</div>
+				<div class="span8"
+					<input type="text" data-provide="typeahead">
+				</div>
+			</div>
+		</div>
+		
 		<div id="user-info"></div>
 		<a href="#" onclick="getUserFriends();">Get friends</a><br>
 		<div>
@@ -64,6 +95,7 @@
 		
 		<!-- add javascript here -->
 		<script src="js/bootstrap/bootstrap-collapse.js"></script>
+		<script src="js/bootstrap/bootstrap-typeahead.js"></script>
 
 	</body>
 </html>
