switching back to buttons

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 					<p>Are you at: 
 				</div>
 				<div class="span3">
-					<div class="well">Soda</div>
+					<button id="choice1" class="btn">Soda</button>
 				</div>
 				<div class="span3">
-					<div class="well">Cory</div>
+					<button id="choice2" class="btn">Cory</button>
 				</div>
 				<div class="span3">
-					<div class="well">Etcheverry</div>
+					<button id="choice3" class="btn">Etcheverry</button>
 				</div>
 			</div>
 			<div class="row">
