--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="span3">
-					<p>Are you at: 
+					<p>Are you at: </p>
 				</div>
 				<div class="span3">
 					<button id="choice1" class="btn">Soda</button>
