--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 			}());
 		</script>
 		
-			<div class="row">
+		<div class="container">
+			<div class="row show-grid">
 				<div class="span3">
 					<p>Are you at: </p>
 				</div>
@@ -67,12 +68,12 @@
 					<button id="choice3" class="btn">Etcheverry</button>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row show-grid">
 				<div class="span12">
 					or
 				</div>
 			</div>
-			<div class="row">
+			<div class="row show-grid">
 				<div class="span4"
 					search by class:
 				</div>
@@ -80,6 +81,7 @@
 					<input type="text" data-provide="typeahead">
 				</div>
 			</div>
+		</div>
 		
 		<div id="user-info"></div>
 		<a href="#" onclick="getUserFriends();">Get friends</a><br>
