popover on what?

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		  
 					<div class="nav-collapse">
 						<ul class="nav">
-							<li><a href="#">What?</a></li>
+							<li><a href="#" rel="popover" title="we're calchat" data-content="here is what we do.  wiggle wiggle wiggle">What?</a></li>
 							<li><a href="#">About</a></li>
 						</ul>
 						<ul class="nav pull-right">
@@ -94,10 +94,12 @@
 			<p><button class="btn-danger" onClick="FB.logout();">Logout</button></p>
 		</div>
 		-->
+		
 		<!-- add javascript here -->
 		<script src="js/bootstrap/bootstrap-collapse.js"></script>
 		<script src="js/bootstrap/bootstrap-typeahead.js"></script>
-
+		<script src="js/bootstrap/bootstrap-tooltip.js"></script>
+		<script src="js/bootstrap/bootstrap-popover.js"></script>
 	</body>
 </html>
 <style>
