--- a/index.html
+++ b/index.html
@@ -78,7 +78,12 @@
 					search by class:
 				</div>
 				<div class="span8">
-					<input type="text" data-provide="typeahead">
+					<input type="text" 
+					class="span3" 
+					style="margin: 0 auto;" 
+					data-provide="typeahead" 
+					data-items="4" 
+					data-source='["Alabama","Alaska","Arizona","Arkansas","California","Colorado","Connecticut","Delaware","Florida","Georgia","Hawaii","Idaho","Illinois","Indiana","Iowa","Kansas","Kentucky","Louisiana","Maine","Maryland","Massachusetts","Michigan","Minnesota","Mississippi","Missouri","Montana","Nebraska","Nevada","New Hampshire","New Jersey","New Mexico","New York","North Dakota","North Carolina","Ohio","Oklahoma","Oregon","Pennsylvania","Rhode Island","South Carolina","South Dakota","Tennessee","Texas","Utah","Vermont","Virginia","Washington","West Virginia","Wisconsin","Wyoming"]'>
 				</div>
 			</div>
 		</div>
