added some cs classes in typeahead

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					style="margin: 0 auto;" 
 					data-provide="typeahead" 
 					data-items="4" 
-					data-source='["Alabama","Alaska","Arizona","Arkansas","California","Colorado","Connecticut","Delaware","Florida","Georgia","Hawaii","Idaho","Illinois","Indiana","Iowa","Kansas","Kentucky","Louisiana","Maine","Maryland","Massachusetts","Michigan","Minnesota","Mississippi","Missouri","Montana","Nebraska","Nevada","New Hampshire","New Jersey","New Mexico","New York","North Dakota","North Carolina","Ohio","Oklahoma","Oregon","Pennsylvania","Rhode Island","South Carolina","South Dakota","Tennessee","Texas","Utah","Vermont","Virginia","Washington","West Virginia","Wisconsin","Wyoming"]'>
+					data-source='["cs61a","cs61b","cs61c", "cs160", "cs161", "cs162", "cs164", "cs170", "cs172", "cs186", "cs188"]'>
 				</div>
 			</div>
 		</div>
