--- a/calchat.html
+++ b/calchat.html
@@ -8,6 +8,7 @@
 		<script src="js/geo.js"></script>
 		<script src="js/fb.js"></script>
 		<link rel="stylesheet" href="css/bootstrap-responsive.css">
+		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet/less" type="text/css" href="less/bootstrap.less">
 		<script src="less/less-1.2.1.min.js" type="text/javascript"></script>	
 	</head>
