add tab.js file

--- a/calchat.html
+++ b/calchat.html
@@ -61,4 +61,7 @@
 					</tr>
 				</table>
 			</div>
+			
+			<!-- javascript files here -->
+			<script src="js/bootstrap/bootstrap-tab.js"></script>
 	</body>
