--- a/calchat.html
+++ b/calchat.html
@@ -16,7 +16,7 @@
 	<body>
 		<h1>CalChat/Soda</h1>
 		
-		<ul class="tabs">
+		<ul class="nav nav-tabs">
 			<li class="active"><a href="#Soda">Soda</a></li>
 			<li><a href="#160">CS160</a></li>
 			<li><a href="#174">CS174</a></li>
