--- a/calchat.html
+++ b/calchat.html
@@ -14,54 +14,55 @@
 	</head>
 	
 	<body>
-		<h1>CalChat/Soda</h1>
+		<div class="container">
+			<h1>CalChat/Soda</h1>
 		
-		<ul class="nav nav-tabs">
-			<li class="active"><a href="#Soda">Soda</a></li>
-			<li><a href="#160">CS160</a></li>
-			<li><a href="#174">CS174</a></li>
-			<li><a href="#170">CS170</a></li>
-		</ul>
+			<ul class="nav nav-tabs">
+				<li class="active"><a href="#Soda">Soda</a></li>
+				<li><a href="#160">CS160</a></li>
+				<li><a href="#174">CS174</a></li>
+				<li><a href="#170">CS170</a></li>
+			</ul>
 		
-		<div class="row">
-			<div class="span 8">
-				<div class="tab content">
-					<div class="tab-pane active" id="Soda">
-						<div style="overflow:auto; height:300px; width:500px">
-							<table class="table-bordered" cellpadding="0" cellspacing="0" style="width:450px;">
-								<tr>
-									<!--Create some row generator for each output here-->
-									<td>Chat<br>chat1<br>chat2<br>chat3<br>chat1<br>chat3<br></td>
-								</tr>
-							</table>
+			<div class="row">
+				<div class="span 8">
+					<div class="tab content">
+						<div class="tab-pane active" id="Soda">
+							<div style="overflow:auto; height:300px; width:500px">
+								<table class="table-bordered" cellpadding="0" cellspacing="0" style="width:450px;">
+									<tr>
+										<!--Create some row generator for each output here-->
+										<td>Chat<br>chat1<br>chat2<br>chat3<br>chat1<br>chat3<br></td>
+									</tr>
+								</table>
+							</div>
 						</div>
+						<div class="tab-pane" id="160">Chatchatchat...</div>
+						<div class="tab-pane" id="174">Chatchatchat...</div>
+						<div class="tab-pane" id="170">Chatchatchat...</div>
 					</div>
-					<div class="tab-pane" id="160">Chatchatchat...</div>
-					<div class="tab-pane" id="174">Chatchatchat...</div>
-					<div class="tab-pane" id="170">Chatchatchat...</div>
+			
+					<form action="input here" method="get">
+						<input type="text" name="fname" /> 
+						<input type="submit" name="Chat" />
+					</form>
 				</div>
 			
-				<form action="input here" method="get">
-					<input type="text" name="fname" /> 
-					<input type="submit" name="Chat" />
-				</form>
-			</div>
-			
-			<div class="span 4">
-				<table class="table-bordered">
-					<!--Generate users here-->
-					<tr>
-						<td>Name1</td>
-					</tr>
-					<tr>
-						<td>Name2</td>
-					</tr>
-					<tr>
-						<td>Name3</td>
-					</tr>
-				</table>
+				<div class="span 4">
+					<table class="table-bordered">
+						<!--Generate users here-->
+						<tr>
+							<td>Name1</td>
+						</tr>
+						<tr>
+							<td>Name2</td>
+						</tr>
+						<tr>
+							<td>Name3</td>
+						</tr>
+					</table>
+				</div>
 			</div>
 			
 			<!-- javascript files here -->
-			<script src="js/bootstrap/bootstrap-tab.js"></script>
 	</body>
