--- a/calchat.html
+++ b/calchat.html
@@ -15,7 +15,32 @@
 	
 	<body>
 		<div class="container">
-			<h1>CalChat/Soda</h1>
+			<div class="navbar">
+				<div class="navbar-inner">
+					<div class="container">
+		
+						<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</a>
+		  
+						<a class="brand" href="#">calchat/soda</a>
+		  
+						<div class="nav-collapse">
+							<ul class="nav">
+								<li><a href="#" rel="popover" title="we're calchat" data-content="here is what we do.  wiggle wiggle wiggle">What?</a></li>
+								<li><a href="#">About</a></li>
+							</ul>
+							<ul class="nav pull-right">
+								<li>
+									<div id="login" class="fb-login-button" data-show-faces="false" data-width="200" data-max-rows="1"></div>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
 		
 			<ul class="nav nav-tabs">
 				<li class="active"><a href="#Soda">Soda</a></li>
