--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 						<ul class="nav pull-right">
 							<li>
 								<div id="login" class="fb-login-button" data-show-faces="false" data-width="200" data-max-rows="1"></div>
+								<div id="user-info"></div>
 							</li>
 						</ul>
 					</div>
@@ -98,7 +99,6 @@
 			</div>
 		</div>
 		
-		<div id="user-info"></div>
 		<!--
 		<a href="#" onclick="getUserFriends();">Get friends</a><br>
 		<div>
@@ -121,6 +121,8 @@
 <style>
   body.connected #login { display: none; }
   body.connected #logout { display: block; }
+  body.connected #user-info { display:block; }
   body.not_connected #login { display: block; }
   body.not_connected #logout { display: none; }
+  body.not_connected #user-info {display: none; }
 </style>
