--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				</div>
 			</div>
 			<div class="row show-grid">
-				<div class="span12">
+				<div style="margin-top:15px; margin-bottom:20px" class="span12">
 					or
 				</div>
 			</div>
