--- a/index.html
+++ b/index.html
@@ -54,15 +54,28 @@
 			}());
 		</script>
 		<script>
-		window.fbAsyncInit = function() {
-	FB.init({ appId: '297402036983700', 
-	status: true, 
-	cookie: true,
-	xfbml: true,
-	auth: true});
+			window.fbAsyncInit = function() {
+				FB.init({ appId: '297402036983700', 
+					status: true, 
+					cookie: true,
+					xfbml: true,
+					auth: true});
 
-	FB.Event.subscribe('auth.authResponseChange', handleResponseChange);  
-};
+				FB.Event.subscribe('auth.authResponseChange', handleResponseChange);  
+			};
+		</script>
+		<script>
+			function handleResponseChange(response) {
+				console.log(response);
+	
+				document.body.className = response.authResponse ? 'connected' : 'not_connected';
+
+				if (response.authResponse) {
+					console.log(response);
+				}
+
+				updateUserInfo(response);
+			}
 		</script>
 		<div class="container">
 			<div class="row show-grid">
