damn forgot div sucks man

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						</ul>
 						<ul class="nav pull-right">
 							<li>
-								<div id="login"><button class="btn" onClick="loginUser();">Login</button>
+								<div id="login"><button class="btn" onClick="loginUser();">Login</button></div>
 								<div id="user-info"></div>
 							</li>
 						</ul>
