--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" 
 			content="initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
 		<script src="js/jquery-1.7.1.min.js"></script>
+		<script src="js/yqlgeo.js"></script>
 		<script src="js/geo.js"></script>
 		<script src="js/fb.js"></script>
 		<link rel="stylesheet" href="css/bootstrap-responsive.css">
