--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		</script>
 		
 		<div class="container">
-			<div class="row show-grid">
+			<div class="row">
 				<div class="span2">
 					<p>Are you at: </p>
 				</div>
@@ -87,7 +87,7 @@
 					or
 				</div>
 			</div>
-			<div class="row show-grid">
+			<div class="row">
 				<div class="span2">
 					search by class:
 				</div>
@@ -98,6 +98,11 @@
 					data-provide="typeahead" 
 					data-items="4" 
 					data-source='["cs61a","cs61b","cs61c", "cs160", "cs161", "cs162", "cs164", "cs170", "cs172", "cs186", "cs188"]'>
+				</div>
+			</div>
+			<div class="row">
+				<div class="span12">
+					<img id="map">
 				</div>
 			</div>
 		</div>
