adding some style

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="span12">
+				<div style="margin-top:15px; margin-bottom:20px" class="span12">
 					<img id="map">
 				</div>
 			</div>
