--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<ul class="nav pull-right">
 							<li>
 								<div id="login"><button class="btn" onClick="loginUser();">Login</button></div>
-								<div id="user-info"></div>
+								<div id="user-info" data-toggle="dropdown"></div>
 							</li>
 						</ul>
 					</div>
@@ -70,7 +70,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="span2">
-					<p>Are you at: </p>
+					<p>You are near: </p>
 				</div>
 				<div class="span2">
 					<button id="choice1" class="btn">Soda</button>
