--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 		<script src="js/bootstrap/bootstrap-typeahead.js"></script>
 		<script src="js/bootstrap/bootstrap-tooltip.js"></script>
 		<script src="js/bootstrap/bootstrap-popover.js"></script>
+		<script src="js/bootstrap/bootstrap-dropdown.js"></script>
 	</body>
 </html>
 <style>
