--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="span2">
-					<p>You are near: </p>
+					<p>You <a href="#" rel="tooltip" data-original-title="fir else">are</a> near: </p>
 				</div>
 				<div class="span2">
 					<button id="choice1" class="btn">Soda</button>
@@ -120,6 +120,7 @@
 		</div>
 		
 		<!-- add javascript here -->
+		<script src="js/bootstrap/jquery.js"></script>
 		<script src="js/bootstrap/bootstrap-collapse.js"></script>
 		<script src="js/bootstrap/bootstrap-typeahead.js"></script>
 		<script src="js/bootstrap/bootstrap-tooltip.js"></script>
