--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 		
 	</head>
 	<body>
-	
+		<script>
+			jQuery(window).ready(function() {
+				initiate_geolocation();
+			});
+		</script>
 		<div class="navbar">
 			<div class="navbar-inner">
 				<div class="container">
