popover on what?

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 		<script>
 			jQuery(window).ready(function() {
 				initiate_geolocation();
+				$('#what')
+					.popover({
+						placement:'bottom'
+					})
+					.click(function(e) {
+						e.preventDefault()
+					})
 			});
 		</script>
 		<div class="navbar">
@@ -35,7 +42,7 @@
 		  
 					<div class="nav-collapse">
 						<ul class="nav">
-							<li><a href="#" rel="popover" title="we're calchat" data-content="here is what we do.  wiggle wiggle wiggle">What?</a></li>
+							<li><a href="#" id="what" rel="popover" data-original-title="we're calchat" data-content="here is what we do.  wiggle wiggle wiggle">What?</a></li>
 							<li><a href="#">About</a></li>
 						</ul>
 						<ul class="nav pull-right">
@@ -74,7 +81,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="span2">
-					<p>You <a href="#" rel="tooltip" data-original-title="fir else">are</a> near: </p>
+					<p>You are near: </p>
 				</div>
 				<div class="span2">
 					<button id="choice1" class="btn">Soda</button>
