--- a/multiroomchat.html
+++ b/multiroomchat.html
@@ -20,7 +20,8 @@ $(document).ready(function(){
     now.changeRoom($(this).text());
   });
 
-  now.name = prompt("What's your name?", "");
+  now.name = prompt("What's your name?", ""); // get firstname instead from fbconnect 
+  now.userid = ; // get uid from fbconnect (to make link to fb)
 
 });
 </script>
@@ -29,12 +30,12 @@ $(document).ready(function(){
 <body>
 
 <div>
-  <a href="#" class="change selected">room 1</a> -
-  <a href="#" class="change">room 2</a> -
-  <a href="#" class="change">room 3</a>
+  <a href="#" class="change selected">Soda Hall</a> -
+  <a href="#" class="change">CS 160</a> -
+  <a href="#" class="change">CS 169</a>
 </div>
 <br>
-<div id="messages"><br>You're in room 1</div>
+<div id="messages"><br>You're in Soda Hall chat</div>
 <input type="text" id="text-input">
 <input type="button" value="Send" id="send-button">
 </body>
