add type to script

--- a/multiroomchat.html
+++ b/multiroomchat.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<title>nowjs test</title>
-	<script src="js/jquery-1.7.1.min.js"></script>
-	<script src="/nowjs/now.js"></script>
+	<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
+	<script src="/nowjs/now.js" type="text/javascript"></script>
 	<script src="js/fb.js"></script>
 
 	<script>
