--- a/multiroomchat.html
+++ b/multiroomchat.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>nowjs test</title>
-	<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
-	<script src="/nowjs/now.js" type="text/javascript"></script>
-	<script src="js/fb.js"></script>
+<title>nowjs test</title>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+<script src="/nowjs/now.js"></script>
 
-	<script>
-		$(document).ready(function(){
-			now.receiveMessage = function(name, message){
-			$("#messages").append("<br>" + name + ": " + message);
-			}
+<script>
+$(document).ready(function(){
+  now.receiveMessage = function(name, message){
+    $("#messages").append("<br>" + name + ": " + message);
+  }
   
-			$("#send-button").click(function(){
-				now.distributeMessage($("#text-input").val());
-				$("#text-input").val("");
-			});
+  $("#send-button").click(function(){
+    now.distributeMessage($("#text-input").val());
+    $("#text-input").val("");
+  });
 
-			$(".change").click(function(){
-				now.changeRoom($(this).text());
-			});
+  $(".change").click(function(){
+    now.changeRoom($(this).text());
+  });
 
-  now.name = prompt("What's your name?", ""); // get firstname instead from fbconnect 
-  now.userid = ; // get uid from fbconnect (to make link to fb)
+  now.name = prompt("What's your name?", "");
 
 });
 </script>
@@ -31,12 +29,12 @@
 <body>
 
 <div>
-  <a href="#" class="change selected">Soda Hall</a> -
-  <a href="#" class="change">CS 160</a> -
-  <a href="#" class="change">CS 169</a>
+  <a href="#" class="change selected">room 1</a> -
+  <a href="#" class="change">room 2</a> -
+  <a href="#" class="change">room 3</a>
 </div>
 <br>
-<div id="messages"><br>You're in Soda Hall chat</div>
+<div id="messages"><br>You're in room 1</div>
 <input type="text" id="text-input">
 <input type="button" value="Send" id="send-button">
 </body>
