--- a/multiroomchat.html
+++ b/multiroomchat.html
@@ -30,7 +30,7 @@
 				FB.getLoginStatus(function(response) {
 					if (response.status === 'connected') {
 						FB.api('/me', function(response) {
-							var name = response.name;
+							now.name = response.name;
 							(elem = document.getElementById('login')).parentNode.removeChild(elem);
 						       document.getElementById('user-info').innerHTML = '<img id="profile-picture" src="https://graph.facebook.com/' + response.id + '/picture">' + ' ' + response.name;
 						});
@@ -64,9 +64,6 @@ $(document).ready(function(){
   $(".change").click(function(){
     now.changeRoom($(this).text());
   });
-
-  now.name = name;
-  console.log(now.name);
 
 });
 </script>
