login button on chat

--- a/multiroomchat.html
+++ b/multiroomchat.html
@@ -41,6 +41,7 @@
 			};
 		</script>
 <div>
+<div id="login"><button class="btn" onClick="loginUser();">Login</button></div>
   <a href="#" class="change selected">room 1</a> -
   <a href="#" class="change">room 2</a> -
   <a href="#" class="change">room 3</a>
