--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 					<button id="choice1" class="btn">Soda</button>
 				</div>
 				<div class="span2">
-					<button id="choice2" class="btn">Cory</button>
+					<button id="choice2" class="btn disabled">Cory</button>
 				</div>
 				<div class="span2">
-					<button id="choice3" class="btn">Etcheverry</button>
+					<button id="choice3" class="btn disabled">Etcheverry</button>
 				</div>
 			</div>
 			<div class="row show-grid">
