--- a/index.html
+++ b/index.html
@@ -115,12 +115,14 @@
 				</div>
 				<div class="span4">
 					<input type="text" 
-					class="span3" 
+					class="span3 form-search" 
 					style="margin: 0 auto;" 
 					data-provide="typeahead" 
 					data-items="4" 
 					data-source='["cs61a","cs61b","cs61c", "cs160", "cs161", "cs162", "cs164", "cs170", "cs172", "cs186", "cs188"]'>
 				</div>
+				<div class="span2">
+					<button id="search" class="btn-primary">Search</button>
 			</div>
 			<div class="row">
 				<div style="margin-top:15px; margin-bottom:20px" class="span12">
