moving login status

--- a/multiroomchat.html
+++ b/multiroomchat.html
@@ -54,7 +54,19 @@
 
 <script>
 $(document).ready(function(){
-  now.receiveMessage = function(name, message){
+				FB.getLoginStatus(function(response) {
+					if (response.status === 'connected') {
+						FB.api('/me', function(response) {
+							now.name = response.name;
+							(elem = document.getElementById('login')).parentNode.removeChild(elem);
+						       document.getElementById('user-info').innerHTML = '<img id="profile-picture" src="https://graph.facebook.com/' + response.id + '/picture">' + ' ' + response.name;
+						});
+					} else {
+						console.log(response.status);
+					}
+				});
+				
+  now.receiveMessage = function(name,  message){
     $("#messages").append("<br>" + name + ": " + message);
   }
   
