--- a/multiroomchat.html
+++ b/multiroomchat.html
@@ -4,7 +4,12 @@
 <title>nowjs test</title>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 <script src="/nowjs/now.js"></script>
-<script type="text/javascript" src="http://www.calchat.jessechen.net/js/fb.js"/></script>
+		<script src="js/fb.js"></script>
+		<link rel="stylesheet" href="css/bootstrap-responsive.css">
+		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="css/index.css">
+		<link rel="stylesheet/less" type="text/css" href="less/bootstrap.less">
+		<script src="less/less-1.2.1.min.js" type="text/javascript"></script>
 
 </head>
 
