--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Welcome to calchat!</title>
 		<meta name="viewport" 
@@ -8,8 +8,8 @@
 		<script src="js/yqlgeo.js"></script>
 		<script src="js/geo.js"></script>
 		<script src="js/fb.js"></script>
-		<link rel="stylesheet" href="css/bootstrap-responsive.css">
 		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="css/bootstrap-responsive.css">
 		<link rel="stylesheet" href="css/index.css">
 		<link rel="stylesheet/less" type="text/css" href="less/bootstrap.less">
 		<script src="less/less-1.2.1.min.js" type="text/javascript"></script>
