--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
 					<p>You are near: </p>
 				</div>
 				<div class="span2">
-					<button id="choice1" class="btn">Soda</button>
+					<button id="choice1" onClick="parent.location='http://www.calchat.jessechen.net:8080/soda'" class="btn">Soda</button>
 				</div>
 				<div class="span2">
-					<button id="choice2" class="btn disabled">Cory</button>
+					<button id="choice2" onClick="parent.location='http://www.calchat.jessechen.net:8080/cory'" class="btn">Cory</button>
 				</div>
 				<div class="span2">
-					<button id="choice3" class="btn disabled">Etcheverry</button>
+					<button id="choice3" onClick="parent.location='http://www.calchat.jessechen.net:8080/etcheverry'" class="btn">Etcheverry</button>
 				</div>
 			</div>
 			<div class="row show-grid">
