--- a/multiroomchat.html
+++ b/multiroomchat.html
@@ -62,7 +62,7 @@
  <script>
 $(document).ready(function(){
   now.receiveMessage = function(name, message){
-    $("#messages").append("<br>" + name + ": " + message);
+    $("#messages").append("<br><a href=http://facebook.com/" + name = ">" + name + "</a>: " + message);
   }
   
   $("#send-button").click(function(){
@@ -74,7 +74,7 @@ $(document).ready(function(){
     now.changeRoom($(this).text());
   });
 
-	now.name = prompt("What's your name?", "");
+	now.name = prompt("Enter your facebook username", "");
 });
 </script>
 </body>
