--- a/multiroomchat.html
+++ b/multiroomchat.html
@@ -62,7 +62,7 @@
  <script>
 $(document).ready(function(){
   now.receiveMessage = function(name, message){
-    $("#messages").append("<br><a href=http://facebook.com/" + name = ">" + name + "</a>: " + message);
+    $("#messages").append("<br><a href='http://facebook.com/" + name + "'>" + name + "</a>: " + message);
   }
   
   $("#send-button").click(function(){
